Se agrego diseño

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -36,6 +36,9 @@
             <button class="mt-4 w-full bg-gradient-to-tr from-blue-600 to-indigo-600 text-indigo-100 py-2 rounded-md text-lg tracking-wide btn-add-product" type="button">Add Product</button>
             <p class="message-error mt-3 text-center bg-red-500 text-white p-1 hidden"></p>
           </div>
+          <div class="float-right mt-4 border-inherit text-white bg-green-500 w-36 text-center p-2 rounded-md">
+            <a href="/api/products"> View Products </a>
+          </div>
         </form>
       </div>
 
