--- a/src/public/products.html
+++ b/src/public/products.html
@@ -70,7 +70,7 @@
                                     </th>
                                 </tr>
                             </thead>
-                            <tbody class="table-products overflow-y-scroll w-full" style="height: 200px;">
+                            <tbody class="table-products overflow-y-scroll w-full">
                                 
                             </tbody>
                         </table>
@@ -85,36 +85,28 @@
       </div>
 
       <div class="container mx-auto mt-6">
-        <div class="max-w-2xl border rounded">
-          <div>
-            <div class="w-full bg-white">
-              <div class="relative flex items-center p-3 border-b border-gray-300">
+        <div class="max-w-2xl">
+          <div class="w-full bg-white flex gap-2">
+            <div class="border-solid w-2/6">
+              <div class="relative flex items-center p-3 border-b border-gray-200">
+                <span class="block ml-2 font-bold text-gray-600 text-2xl">Users</span>
+                </span>
+              </div>
+            </div>
+            <div class="w-4/6 bg-white border-l">
+              <div class="relative flex items-center p-3 border-b border-gray-200">
                 <span class="block ml-2 font-bold text-gray-600 text-2xl">Centro de Mensajes</span>
                 </span>
               </div>
               <div class="relative w-full p-6 overflow-y-auto h-96">
   
-                <ul class="space-y-2">
-                  <li class="flex justify-start">
-                    <div class="relative max-w-xl px-4 py-2 text-gray-700 rounded shadow">
-                      <span class="block">Hi</span>
-                    </div>
-                  </li>
-                  <li class="flex justify-end">
-                    <div class="relative max-w-xl px-4 py-2 text-gray-700 bg-gray-100 rounded shadow">
-                      <span class="block">Hiiii</span>
-                    </div>
-                  </li>
-                  <li class="flex justify-end">
-                    <div class="relative max-w-xl px-4 py-2 text-gray-700 bg-gray-100 rounded shadow">
-                      <span class="block">how are you?</span>
-                    </div>
-                  </li>
-                  <li class="flex justify-start">
+                <ul class="space-y-2 container-messages">
+                  
+                  <!-- <li class="flex justify-start">
                     <div class="relative max-w-xl px-4 py-2 text-gray-700 rounded shadow">
                       <span class="block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </span>
                     </div>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
               <form class="form-chat">
@@ -123,7 +115,7 @@
                     class="chat-message block w-full py-2 pl-4 mx-3 bg-gray-100 rounded-full outline-none focus:text-gray-700"
                     name="message" required />
                   <button type="submit" class="btn-send-message">
-                    <svg class="w-5 h-5 text-gray-500 origin-center transform rotate-90" xmlns="http://www.w3.org/2000/svg"
+                    <svg class="w-5 h-5 text-gray-500 origin-center transform rotate-90 hover:text-green-600"" xmlns="http://www.w3.org/2000/svg"
                       viewBox="0 0 20 20" fill="currentColor">
                       <path
                         d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z" />
