--- a/src/public/index.html
+++ b/src/public/index.html
@@ -18,9 +18,14 @@
             <div class="px-12 pb-10">
                 <div class="w-full mb-2">
                     <div class="flex items-center flex-col">
+                        <input type='email' placeholder="Email"
+                            class="w-full border rounded px-3 py-2 text-gray-700 focus:outline-none email" />
+                        <p class="message-error-email h-6 text-red-500 ml-3 w-full  text-xs" ></p>
+                    </div>
+                    <div class="flex items-center flex-col">
                         <input type='text' placeholder="Username"
                             class="w-full border rounded px-3 py-2 text-gray-700 focus:outline-none username" />
-                        <p class="message-error h-6 text-red-500 ml-3 w-full" ></p>
+                        <p class="message-error-user h-6 text-red-500 ml-3 w-full text-xs" ></p>
                     </div>
                 </div>
                 <button type="submit" class="w-full py-2 rounded-full bg-green-600 text-gray-100  focus:outline-none btn-agree">agree</button>
@@ -33,21 +38,30 @@
         const socketLogin = io();
 
         const username = document.querySelector('.username');
+        const email = document.querySelector('.email');
         const formLogin = document.querySelector('.form-login');
-        const messageError = document.querySelector('.message-error');
+        const messageErrorUser = document.querySelector('.message-error-user');
+        const messageErrorEmail = document.querySelector('.message-error-email');
 
         formLogin.addEventListener('submit', (e) => {
             e.preventDefault();
-            if (username.value.trim() === "" || username.value.trim().length < 3) {
-                messageError.textContent = 'Campo Requerido';
+            if (!username.value.trim() || username.value.trim().length < 3 || !email.value) {
+                messageErrorUser.textContent = 'Campo Requerido';
                 username.classList.add('border-red-500', 'placeholder-red-500')
+                messageErrorEmail.textContent = 'Campo Requerido';
+                email.classList.add('border-red-500', 'placeholder-red-500')
                 return
             }
-            messageError.textContent = ''
+            messageErrorUser.textContent = ''
             username.classList.remove('border-red-500', 'placeholder-red-500')
+            messageErrorEmail.textContent = ''
+            email.classList.remove('border-red-500', 'placeholder-red-500')
 
-            socketLogin.emit('user', username.value.trim());
-            
+            socketLogin.emit('user', {
+                email: email.value,
+                user : username.value
+            });
+
             sessionStorage.setItem('userActive', username.value.trim())
             location.replace('products.html');
         })
