--- a/src/public/products.html
+++ b/src/public/products.html
@@ -89,8 +89,13 @@
           <div class="w-full bg-white flex gap-2">
             <div class="border-solid w-2/6">
               <div class="relative flex items-center p-3 border-b border-gray-200">
+                <img src="./img/users.png" alt="users" height="20" width="20">
                 <span class="block ml-2 font-bold text-gray-600 text-2xl">Users</span>
                 </span>
+              </div>
+              <div class="relative w-full p-6 overflow-y-auto h-96">
+                <ul class="space-y-2 container-users">
+                </ul>
               </div>
             </div>
             <div class="w-4/6 bg-white border-l">
@@ -99,14 +104,7 @@
                 </span>
               </div>
               <div class="relative w-full p-6 overflow-y-auto h-96">
-  
                 <ul class="space-y-2 container-messages">
-                  
-                  <!-- <li class="flex justify-start">
-                    <div class="relative max-w-xl px-4 py-2 text-gray-700 rounded shadow">
-                      <span class="block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </span>
-                    </div>
-                  </li> -->
                 </ul>
               </div>
               <form class="form-chat">
