--- a/src/public/productsTest.html
+++ b/src/public/productsTest.html
@@ -17,22 +17,11 @@
 				<th class="bg-gray-600 p-2 text-white font-bold md:border md:border-grey-500 text-left block md:table-cell">Actions</th>
 			</tr>
 		</thead>
-		<tbody class="block md:table-row-group body-tablet">
-			<tr class="bg-white border border-grey-500 md:border-none block md:table-row">
-				<td class="p-2 md:border md:border-grey-500 text-left block md:table-cell"><span class="inline-block w-1/3 md:hidden font-bold">Name</span>Maribel Koch</td>
-				<td class="p-2 md:border md:border-grey-500 text-left block md:table-cell"><span class="inline-block w-1/3 md:hidden font-bold">User Name</span>maribelkoch</td>
-				<td class="p-2 md:border md:border-grey-500 text-left block md:table-cell"><span class="inline-block w-1/3 md:hidden font-bold">Email Address</span>mkoch@yahoo.com</td>
-				<td class="p-2 md:border md:border-grey-500 text-left block md:table-cell"><span class="inline-block w-1/3 md:hidden font-bold">Mobile</span>582-400-3X36</td>
-				<td class="p-2 md:border md:border-grey-500 text-left block md:table-cell">
-					<span class="inline-block w-1/3 md:hidden font-bold">Actions</span>
-					<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-500 rounded">Edit</button>
-					<button class="bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-2 border border-red-500 rounded">Delete</button>
-				</td>
-			</tr>			
+		<tbody class="block md:table-row-group body-tablet">		
 		</tbody>
     </table>
     <script>
-        const products = [];
+        let products = [];
         const bodyTablet = document.querySelector('.body-tablet');
         document.addEventListener('DOMContentLoaded', () => {
             generateProducts();
@@ -40,15 +29,53 @@
         })
 
         async function generateProducts() {
-            const response = await fetch('http://localhost:4000/api/products-test/popular');
+            const response = await fetch('http://localhost:4000/api/products-test/popular',{
+                method : "POST"
+            });
             const data = await response.json();
         }
 
         async function loadProducts() {
             const response = await fetch('http://localhost:4000/api/products-test/all');
             const data = await response.json();
-            products = [...products, data];
-            console.log(products)
+            products = data.payload;
+            console.log(data)
+            showProducts(products);
+        }
+
+        function showProducts(products) {
+            bodyTablet.innerHTML = "";
+            products.forEach( (product, index) => {
+                const tr = document.createElement('tr');
+                tr.innerHTML += `
+                    <td class="p-2 md:border md:border-grey-500 text-left block md:table-cell">${index + 1}</td>
+                    <td class="p-2 md:border md:border-grey-500 text-left block md:table-cell">${product.name}</td>
+                    <td class="p-2 md:border md:border-grey-500 text-left block md:table-cell">${product.price}</td>
+                    <td class="p-2 md:border md:border-grey-500 text-left block md:table-cell">
+                        <img src=${product.img}/>
+                    </td>
+                    <td class="p-2 md:border md:border-grey-500 text-left block md:table-cell">
+                        <button 
+                            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 border border-blue-500 rounded" 
+                            onclick="deleteProduct('${product.id}')"
+                        >Delete</button>
+                    </td>
+                ` 
+                bodyTablet.appendChild(tr);
+            })
+        }
+
+        async function deleteProduct(id) {
+            const confirmDelete = confirm("Desea eliminar este producto?");
+            if (confirmDelete) {
+                const response = await fetch(`http://localhost:4000/api/products-test/${id}`, {
+                    method : 'DELETE'
+                });
+                const data = await response.json();
+                alert(data.message)
+                products = products.filter( product => product.id !== id);
+                showProducts(products);
+            }
         }
     </script>
 </body>
