--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,10 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
-    <link rel="stylesheet" href="./dist/output.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- <link rel="stylesheet" href="./dist/output.css"> -->
 </head>
 <body class="bg-gray-300" style="font-family:Roboto">
-    <div class="w-full flex items-center justify-center">
+    <div class="container mt-5 mb-5 d-flex justify-content-center">
+        <div class="card px-1 py-4 w-25">
+            <div class="card-body">
+                <form action="" class="form-login">
+                    <div class="row mb-3">
+                        <img width="80" height="80" src="https://raw.githubusercontent.com/sefyudem/Responsive-Login-Form/master/img/avatar.svg">
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-sm-12">
+                            <div class="form-group">
+                                <input class="form-control email" type='email' placeholder="Email"> 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-sm-12">
+                            <div class="form-group">
+                                <input class="form-control username" type="text" placeholder="Username"> 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-sm-12">
+                            <div class="form-group">
+                                <input class="form-control name" type="text" placeholder="Name"> 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-sm-12">
+                            <div class="form-group">
+                                <input class="form-control lastname" type="text" placeholder="LastName"> 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-sm-12">
+                            <div class="form-group">
+                                <input class="form-control age" type="number" placeholder="Age"> 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-sm-12">
+                            <div class="form-group">
+                                <input class="form-control avatar" type="text" placeholder="Avatar"> 
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary btn-block confirm-button" type="submit">Confirm</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="w-full flex items-center justify-center">
         <form class="w-full md:w-2/6 bg-white rounded-lg form-login my-7">
             <div class="flex font-bold justify-center mt-6">
                 <img class="h-20 w-20"
@@ -51,8 +107,9 @@
                 <button type="submit" class="w-full py-2 rounded-full bg-green-600 text-gray-100  focus:outline-none btn-agree">agree</button>
             </div>
         </form>
-    </div>
+    </div> -->
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socketLogin = io();
@@ -65,23 +122,24 @@
         const avatar = document.querySelector('.avatar');
 
         const formLogin = document.querySelector('.form-login');
-        const messageErrorUser = document.querySelector('.message-error-user');
-        const messageErrorEmail = document.querySelector('.message-error-email');
+        // const messageErrorUser = document.querySelector('.message-error-user');
+        // const messageErrorEmail = document.querySelector('.message-error-email');
 
         formLogin.addEventListener('submit', (e) => {
             e.preventDefault();
             if (!username.value.trim() || username.value.trim().length < 3 || !email.value) {
-                messageErrorUser.textContent = 'Campo Requerido';
-                username.classList.add('border-red-500', 'placeholder-red-500')
-                messageErrorEmail.textContent = 'Campo Requerido';
-                email.classList.add('border-red-500', 'placeholder-red-500')
+                // messageErrorUser.textContent = 'Campo Requerido';
+                // username.classList.add('border-red-500', 'placeholder-red-500')
+                // messageErrorEmail.textContent = 'Campo Requerido';
+                // email.classList.add('border-red-500', 'placeholder-red-500')
                 return
             }
-            messageErrorUser.textContent = ''
-            username.classList.remove('border-red-500', 'placeholder-red-500')
-            messageErrorEmail.textContent = ''
-            email.classList.remove('border-red-500', 'placeholder-red-500');
+            // messageErrorUser.textContent = ''
+            // username.classList.remove('border-red-500', 'placeholder-red-500')
+            // messageErrorEmail.textContent = ''
+            // email.classList.remove('border-red-500', 'placeholder-red-500');
 
+            console.log("Enviado")
             const user = {
                 id: email.value,
                 user : username.value,
