Cambios en el diseño

--- a/src/public/products.html
+++ b/src/public/products.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="h-full bg-gradient-to-br from-blue-600 to-indigo-600 w-full p-10">
+      <div class="nameUser"></div>
       <div class="flex gap-5">
         <form class="form-add-product ">
           <div class="bg-white px-10 py-8 rounded-xl w-screen shadow-md max-w-sm ">
