--- a/src/public/index.html
+++ b/src/public/index.html
@@ -27,6 +27,13 @@
                     <div class="row mb-2">
                         <div class="col-sm-12">
                             <div class="form-group">
+                                <input type="password" id="password" class="form-control form-control" placeholder="Password"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-sm-12">
+                            <div class="form-group">
                                 <input class="form-control username" type="text" placeholder="Username"> 
                             </div>
                         </div>
@@ -111,7 +118,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
+    <script src="./js/login.js"></script>
+    <!-- <script>
         const socketLogin = io();
 
         const username = document.querySelector('.username');
@@ -139,7 +147,6 @@
             // messageErrorEmail.textContent = ''
             // email.classList.remove('border-red-500', 'placeholder-red-500');
 
-            console.log("Enviado")
             const user = {
                 id: email.value,
                 user : username.value,
@@ -157,6 +164,6 @@
             sessionStorage.setItem('userActive', JSON.stringify(user))
             location.replace('products.html');
         })
-    </script>
+    </script> -->
 </body>
 </html>
