--- a/src/public/products.html
+++ b/src/public/products.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div class="h-full bg-gradient-to-br from-blue-600 to-indigo-600 w-full p-10">
-      <div class="nameUser"></div>
+      <div class="bg-green-400 flex justify-between p-2 mb-8">
+        <div class="nameUser"></div>
+        <div class="buttons">
+          <a href="/autentication/logout" class="btn">Logout</a>
+        </div>
+      </div>
       <div class="flex gap-5">
         <form class="form-add-product ">
           <div class="bg-white px-10 py-8 rounded-xl w-screen shadow-md max-w-sm ">
