--- a/src/public/register.html
+++ b/src/public/register.html
@@ -17,21 +17,25 @@
             <div class="card border-0 shadow rounded-3 mt-5">
               <div class="card-body p-4 p-sm-5">
                 <h5 class="card-title text-center mb-5 fw-light fs-5">Sign In</h5>
-                <form class="form-login" action="/autentication/login" method="post">
+                <form class="form-register" action="/autentication/register" method="POST">
+                  <div class="form-floating mb-3">
+                    <input type="text" class="form-control" name="name" id="name" placeholder="Password">
+                    <label for="name">Name</label>
+                  </div>
                   <div class="form-floating mb-3">
                     <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com">
-                    <label for="floatingInput">Email address</label>
+                    <label for="email">Email address</label>
                   </div>
                   <div class="form-floating mb-3">
                     <input type="password" class="form-control" name="password" id="password" placeholder="Password">
-                    <label for="floatingPassword">Password</label>
+                    <label for="password">Password</label>
                   </div>
                   <div class="d-grid">
                     <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Sign
-                      in</button>
+                      Up</button>
                   </div>
                   <div class=" mt-3 text-center">
-                    <a href="register.html">Create an account</a>
+                    <a href="/">Login</a>
                   </div>
                   <hr class="my-4">
                   <div class="d-grid mb-2">
@@ -53,6 +57,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <!-- <script src="./js/login.js"></script> -->
+    <!-- <script src="./js/register.js"></script> -->
 </body>
 </html>
